# dave-codes

./: .dave-framework-files  .gitignore  LICENSE  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  dave-change-summarizer.md  dave-code-reviewer.md  dave-data-pipeline-reviewer.md  dave-database-expert.md  dave-practical-verifier.md  dave-security-reviewer.md  dave-state-inspector.md  dave-tdd-developer.md  dave-topic-researcher.md
.claude/commands/dave/: execute.md  expert.md  plan.md  push.md  reflect.md  review.md
.claude/dave/process/: dave-change-summarizer.md  dave-plan-checker.md
.claude/dave/references/: verification-matrix.md
.claude/dave/templates/: discussion.md  knowledge.md  plan.md  quick-plan.md  research.md
.claude/dave/templates/output/: change-summarizer-output.md
.claude/dave/workflows/: execute.md  expert.md  help.md  plan.md  quick.md  review.md  verify.md
.claude/rules/: context-management.md
.claude/skills/dave-reflect/: patterns.md  templates.md
.claude/skills/review/: SKILL.md
docs/: DESIGN-dave-codes-cli.md  FRAMEWORK-SPEC.md
src/dave_codes/: __init__.py  cli.py  framework_files.py  manifest.py  sync.py
tests/: conftest.py  test_cli.py  test_framework_files.py  test_manifest.py  test_sync.py
